---
version: 0.37
date:    Fri Apr  6 18:04:27 JST 2007
changes:
- make catdir work with current dir in addition to other args.
- make catfile work with current dir in addition to other args.
---
version: 0.36
date:    Mon Oct 16 14:48:58 PDT 2006
- Applied the patch from 
  http://rt.cpan.org/Public/Bug/Display.html?id=20053:
  Made sure Carp is required and the sub Carp::carp is predeclared in
  IO/All.pm.
---
version: 0.35
date:    
Tue May  9 08:25:37 PDT 2006 changes:
- Remove dependency on XXX.pm *groan*
---
version: 0.34
date:    Mon May  8 01:03:12 PDT 2006
changes:
- Remove dependency on Spiffy.pm
- Apply patches and fix bugs from rt
- rt tickets - 11552 12048 14184 12966 13879 17105 7448 11463 7410 7337 7527
  18465
---
version: 0.33
date:    Fri Dec 17 02:33:41 PST 2004
changes:
- Fixed some nagging problems with the tests
---
version: 0.32
date:    Wed Dec 15 12:19:44 PST 2004
changes:
- io('path/to/symlink') would return a file object if the link was to a file. (Dave Rolsky)
- $link->readlink incorrectly returned a new IO::All::Link object, no matter what the link pointed to. (Dave Rolsky)
- io($io_all_object) would not return an object of the same type as the object give to io(), it would always return a plain IO::All object. (Dave Rolsky)
- add head and tail methods
---
version: 0.31
date:    Sun Aug  8 22:49:46 PDT 2004
changes:
- added readdir
- let exists work on non-existant filename
---
version: 0.31
date:    Sat Jul 24 20:19:10 PDT 2004
changes:
- absolute, relative, pathname
- chdir
- stat on unopened file/dir
---
version: 0.30
date:    Mon Jul 19 11:23:15 PDT 2004
changes:
- Split module into several classes
- Pluggable framework
- file->all
- ->touch
- ->empty
---
version: 0.22
date:    Tue Jun  1 11:20:17 PDT 2004
changes:
- Make tests pass on MSWin32 :P
- Added exists method
---
version: 0.21
date:    Sat May 29 12:45:00 PDT 2004
changes:
- Fixed buglets in sockets
- Added Cookbook example for Tiny Web Server
---
version: 0.20