@@ -28,6 +28,11 @@ SYNOPSIS
         io('file.txt') > io('copy.txt');            # Invokes File::Copy
         io('more.txt') >> io('all.txt');            # Add on to a file
 
+        # UTF-8 Support
+        $contents = io('file.txt')->utf8->all;      # Turn on utf8
+        use IO::All -utf8;                          # Turn on utf8 for all io
+        $contents = io('file.txt')->all;            #   by default in this package.
+
         # Print the path name of a file:
         print $io->name;                            # The direct method
         print "$io";                                # Object stringifies to name
@@ -151,6 +156,27 @@ DESCRIPTION
 
     And that is a good thing!
 
+USAGE
+    Normally just say:
+
+        use IO::All;
+
+    and IO::All will export a single function called "io", which contructs
+    all IO objects.
+
+    You can also pass global flags like this:
+
+        use IO::All -strict -utf8 -foobar;
+
+    Which automatically makes those method calls on every new IO object. In
+    other words this:
+
+        my $io = io('lalala.txt');
+
+    becomes this:
+
+        my $io = io('lalala.txt')->strict->utf8->foobar;
+
 METHOD ROLE CALL
     Here is an alphabetical list of all the public methods that you can call
     on an IO::All object.
@@ -176,10 +202,10 @@ METHOD ROLE CALL
     "request", "response", "rmdir", "rmtree", "rootdir", "scalar", "seek",
     "send", "separator", "shutdown", "size", "slurp", "socket", "sort",
     "splitdir", "splitpath", "stat", "stdio", "stderr", "stdin", "stdout",
-    "string", "string_ref", "subject", "sysread", "syswrite", "tail",
-    "tell", "temp", "tie", "tmpdir", "to", "touch", "truncate", "type",
-    "user", "uid", "unlink", "unlock", "updir", "uri", "utf8", "utime" and
-    "write".
+    "strict", "string", "string_ref", "subject", "sysread", "syswrite",
+    "tail", "tell", "temp", "tie", "tmpdir", "to", "touch", "truncate",
+    "type", "user", "uid", "unlink", "unlock", "updir", "uri", "utf8",
+    "utime" and "write".
 
     Each method is documented further below.
 
@@ -691,6 +717,12 @@ THE IO::All METHODS
     * sort
         Indicates whether objects returned from one of the "all" methods
         will be in sorted order by name. True by default.
+
+    * strict
+        Check the return codes of every single system call. To turn this on
+        for all calls in your module, use:
+
+            use IO::All -strict;
 
     * tie
         Indicate that the object should be tied to itself, thus allowing it
